--- a/Midgard.Utilities/Midgard.Utilities.csproj
+++ b/Midgard.Utilities/Midgard.Utilities.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
+    <PackageReference Include="ServiceStack.OrmLite.SqlServer.Core" Version="1.0.39" />
+  </ItemGroup>
 
 </Project>
